updated dist, removed stale source files, fix circle-button overflow (for about screen), fixed matchItem issue in which the backside showed the front side

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,6 +59,7 @@ button {
 .screen {
   height: 100%;
   width: 100%;
+  overflow: hidden;
   position: absolute;
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
