--- a/src/scss/board.scss
+++ b/src/scss/board.scss
@@ -45,11 +45,12 @@ svg {
 
 .match-item,
 .back-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 100%;
   height: 100%;
-  // -webkit-backface-visibility: hidden;
-  // -moz-backface-visibility: hidden;
   @include common.prefix-property(backface-visibility, hidden);
   border-radius: inherit;
   box-sizing: border-box;
@@ -57,9 +58,6 @@ svg {
 }
 
 .back-item {
-  display: grid;
-  justify-items: center;
-  align-items: center;
   background-color: teal;
   @include common.prefix-property(transform, rotateY(180deg));
   border: solid gold $back-item-border-width;
